--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,3 +7,18 @@ services:
       - "./:/cronflow-agent"
     working_dir: /cronflow-agent
     command: "npm run dev"
+    environment:
+      - PORT=8080
+      - DATABASE_DIALECT=mysql
+      - DATABASE_HOST=172.16.1.244
+      - DATABASE_PORT=3306
+      - DATABASE_USERNAME=cronflow_user
+      - DATABASE_NAME=cronflow
+      - DATABASE_PASSWORD=CronFlow2018!
+      - TOKEN_SECRET=cronflow
+      - TOKEN_EXPRIED=7d
+      - TOKEN_ALGORITHMS=HS256
+      - REDIS_HOST=172.16.1.244
+      - REDIS_PORT=6379
+      - REDIS_AUTH=cronflow
+      - REDIS_DB=0
