--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "esw -w src test",
     "test": "jest --watch",
-    "dev": "nodemon --ignore plugins --ignore public src/index.js --exec \"node -r babel-register\"",
+    "dev": "nodemon src/index.js --watch './src/' --exec \"node -r babel-register\"",
     "local": "docker-compose -f docker-compose.dev.yml up",
     "taobao": "npm i --no-package-lock --registry=https://registry.npm.taobao.org",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
@@ -67,6 +67,7 @@
     "ioredis": "^4.0.0",
     "lodash": "^4.17.10",
     "mysql2": "^1.6.1",
+    "rimraf": "^2.6.2",
     "sequelize": "^4.38.0",
     "tracer": "^0.9.1"
   }
