--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "esw -w src test",
+    "clean": "rimraf dist",
     "test": "jest --watch",
     "dev": "nodemon src/index.js --watch './src/' --exec \"node -r babel-register\"",
     "local": "docker-compose -f docker-compose.dev.yml up",
     "taobao": "npm i --no-package-lock --registry=https://registry.npm.taobao.org",
-    "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
+    "build": "npm run clean && mkdir -p dist && babel ./ --ignore node_modules/ --out-dir dist --copy-files",
     "start": "node dist/index.js",
     "prestart": "npm run -s build"
   },
